// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-ijecgk > div,
[data-css-ijecgk] > div {
  border-radius: 100%;
  height: 26px;
  margin: 2px;
  width: 26px;
  background-color: #fff;
  animation-fill-mode: both;
  animation: animation_1wm2cz3 0.75s 0s linear infinite;
  background: transparent !important;
  border: 2px solid #fff;
  border-bottom-color: transparent;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1wm2cz3 0.75s 0s linear infinite;
}

<BallClipRotate
  loading={true}
>
  <div
    data-css-ijecgk=""
  >
    <div />
  </div>
</BallClipRotate>
`;

exports[`enzyme.render 1`] = `
.css-ijecgk > div,
[data-css-ijecgk] > div {
  border-radius: 100%;
  height: 26px;
  margin: 2px;
  width: 26px;
  background-color: #fff;
  animation-fill-mode: both;
  animation: animation_1wm2cz3 0.75s 0s linear infinite;
  background: transparent !important;
  border: 2px solid #fff;
  border-bottom-color: transparent;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1wm2cz3 0.75s 0s linear infinite;
}

<div
  data-css-ijecgk=""
>
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-ijecgk > div,
[data-css-ijecgk] > div {
  border-radius: 100%;
  height: 26px;
  margin: 2px;
  width: 26px;
  background-color: #fff;
  animation-fill-mode: both;
  animation: animation_1wm2cz3 0.75s 0s linear infinite;
  background: transparent !important;
  border: 2px solid #fff;
  border-bottom-color: transparent;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1wm2cz3 0.75s 0s linear infinite;
}

<div
  data-css-ijecgk=""
>
  <div />
</div>
`;
